@@ -1,3 +1,7 @@
+v1.2.4
+	allow overwriting existing streams
+	fix encoding issue
+
 v1.3
 	genre mode (genre -> artist -> album)
 	better playlist support (mpd 0.13 only):
